<resources>
    <string name="app_name">SwiftMove Driver</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="click_agian_exit_application">กดอีกครั้งเพื่อออกจากแอปพลิเคชัน</string>
    <string name="click_view_map">คลิกดูแผนที่</string>

    <string name="marker_title_from">ตำแหน่งรับสิ่งของ</string>
    <string name="marker_title_to">ตำแหน่งส่งสิ่งของ</string>

    <string name="click_for_select_route_to">กดเพื่อเลือกปลายทาง</string>
    <string name="limit_password">อย่างน้อย 8 ตัวอักขระ</string>
    <string name="circle_fr">รับ</string>
    <string name="circle_to">ส่ง</string>
    <string name="forgot_password">ลืมรหัสผ่าน?</string>
    <string name="register_driver">ลงทะเบียนขับรถ</string>
    <string name="first_name">ชื่อ</string>
    <string name="last_name">นามสกุล</string>
    <string name="email">อีเมล</string>
    <string name="password">รหัสผ่าน</string>
    <string name="tel">เบอร์โทรศัพท์</string>
    <string name="ic_card">เลขบัตรประชาชน</string>
    <string name="gender">เพศ</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="area_service">พื้นที่ให้บริการ</string>
    <string name="address">ที่อยู่</string>
    <string name="swiftmove">SwiftMove</string>
    <string name="logo">logo</string>
    <string name="type_car">ประเภทรถ</string>
    <string name="brand_car">ยี่ห้อรถ</string>
    <string name="model_car">รุ่นรถ</string>
    <string name="color_car">สีรถ</string>
    <string name="plate_province">จังหวัดป้ายทะเบียน</string>
    <string name="plate_car">ป้ายทะเบียนรถ</string>
    <string name="kilometer">กิโลเมตร</string>
    <string name="service_charge_start">ค่าบริการเริ่มต้น</string>
    <string name="distance_start">ระยะทางเริ่มต้น</string>
    <string name="service_charge_rate">ค่าบริการตามระยะทาง</string>
    <string name="baht">บาท</string>
    <string name="baht_km">บาท / กม.</string>
    <string name="service_price_driver_lift">ค่าบริการคนขับยกของ</string>
    <string name="service_price_assist_lift">ค่าบริการผู้ช่วยยกของ</string>
    <string name="service_price_cart">ค่าบริการรถเข็น</string>
    <string name="detail_car">รายละเอียดรถที่ให้บริการ</string>
    <string name="detail_service_charge">รายละเอียดค่าบริการ</string>
    <string name="assist_lift">ผู้ช่วยช่วยยกของ</string>
    <string name="driver_lift">คนขับช่วยยกของ</string>
    <string name="cart">รถเข็น</string>
    <string name="ex_plate">ตัวอย่าง : บท 4536</string>
    <string name="ex_model">ตัวอย่าง : Hilux Vigo Champ</string>
    <string name="ex_brand">ตัวอย่าง : Toyota</string>
    <string name="text_help_reset_password">กรุณากรอกอีเมลที่ใช้งานแล้วระบบจะส่งวิธีการตั้งรหัสผ่านใหม่ไปให้</string>
    <string name="number_phone">เบอร์โทรศัพท์</string>
    <string name="password_receive_email">รหัสผ่านที่ได้รับจากอีเมล</string>
    <string name="ex_input_token">ตัวอย่าง : 7326</string>
    <string name="password_new">รหัสผ่านใหม่</string>
    <string name="confirm_password_new">ยืนยันรหัสผ่านใหม่</string>
    <string name="account">บัญชี</string>
    <string name="info_profile">ข้อมูลส่วนตัว</string>
    <string name="info_services">ข้อมูลค่าบริการ</string>
    <string name="info_car">ข้อมูลรถที่ให้บริการ</string>
    <string name="info">ข้อมูล</string>
    <string name="contact_swiftmove">ติดต่อ SwiftMove</string>
    <string name="confirm_password">ยืนยันรหัสผ่าน</string>
    <string name="confirm_password_old">ยืนยันรหัสผ่านปัจจุบัน</string>
    <string name="job">รายการใหม่</string>
    <string name="job_process">รายการที่ดำเนินการอยู่</string>
    <string name="job_history">ประวัติการให้บริการ</string>
    <string name="other">เพิ่มเติม</string>
    <string name="manage_account">จัดการบัญชี</string>
    <string name="logout">ออกจากระบบ</string>
    <string name="change_picture">เปลี่ยนรูป</string>
    <string name="settings">การตั้งค่า</string>
    <string name="version_app">เวอร์ชัน v1.0.0</string>
    <string name="notification_sound">แจ้งเตือนด้วยเสียง</string>
    <string name="notification_vibrate">แจ้งเตือนด้วยระบบสั่น</string>
    <string name="news">รับข่าวสารใหม่ๆ เกี่ยวกับแอปพลิเคชัน</string>
    <string name="job_id"><b><u>หมายเลขงาน</u></b></string>
    <string name="comment">ความคิดเห็น</string>
</resources>
