<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <LinearLayout
                android:id="@+id/linearLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/swiftmove"
                    android:textColor="#4caf50"
                    android:textSize="36sp" />

                <ImageView
                    android:contentDescription="@string/logo"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/ic_logo" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLogo"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/email"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="26dp"
                    android:src="@drawable/ic_email" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingEnd="26dp"
                    android:paddingStart="60dp"
                    android:paddingTop="4dp">

                    <EditText
                        android:textColor="@color/colorTextHead"
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/framePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frameEmail"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/password"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="26dp"
                    android:src="@drawable/ic_password" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingEnd="26dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/selector_button_password_visibility"

                    android:paddingStart="60dp"
                    android:paddingTop="4dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:textColor="@color/colorTextHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>
            </FrameLayout>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/framePassword"
                android:layout_marginBottom="96dp"
                android:layout_marginEnd="26dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:paddingBottom="10dp"
                android:paddingEnd="60dp"
                android:paddingStart="50dp"
                android:paddingTop="10dp"
                fancy:fb_defaultColor="@color/newColorGreenNormal"
                fancy:fb_focusColor="@color/newColorGreenPress"
                fancy:fb_radius="30dp"
                fancy:fb_text="เข้าสู่ระบบ"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forgot_password"
                    android:textAlignment="center"
                    android:textColor="@color/newColorBlueNormal"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/newColorBlueNormal" />

                <TextView
                    android:id="@+id/textViewSignup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="italic"
                    android:text="@string/register_driver"
                    android:textAlignment="center"
                    android:textColor="@color/newColorBlueNormal"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>